# Molecular-Dynamics-Simulation

./: .gitignore  CMakeLists.txt  README.org  main.cpp
include/: parameters.h  simulation.h  types.h  utils.h
script/: plot_data.gnu
src/: simulation.cpp  utils.cpp
